# folio

./: .gitignore  Cargo.toml  LICENSE  README.md  folio.toml  netlify.toml  rust-toolchain.toml
content/pages/: about.md  colophon.md
content/posts/: first-entry.md  on-attention.md  on-keeping-a-journal.md  reading-list-winter-2024.md  tools-for-thinking.md  why-i-built-this.md
content/wiki/: front-matter-reference.md  getting-started.md  tools-for-thinking.md
src/: config.rs  content.rs  generator.rs  main.rs  server.rs
static/css/: main.css
static/js/: main.js
templates/: base.html  home.html  page.html  post.html  tag.html  wiki_index.html  wiki_page.html
